# DetectFace

./: .gitignore  CMakeLists.txt  main.cpp
